# Regolith_Onboarding

./: README.md  meson.build
data/: app.gresource.xml  sampleWorkFlows.json  sample_session_keybindings
data/css/: Regolith_Onboarding.css  flow.css  introPage.css
data/workflows/: sampleWorkFlows.json  sampleWorkFlows2.json
resources/: regolith-logo.avif
src/: Constants.vala  carouselSetup.vala  main.vala  meson.build  onboardingWindow.css  onboardingWindow.vala
src/components/: buttons.vala  common.vala  configManager.vala  handleScreenMode.vala  jsonDataHolder.vala  labels.vala  meson.build  trackKeypressBinding.vala
src/flow/: flow.css  flow_list.vala  flow_window.vala  meson.build
src/intro/: introPage.css  introPage.vala  intro_window.css  intro_window.vala  meson.build
src/parser/: I3Ipc.vala  configParser.vala  jsonReader.vala  json_parser.vala  meson.build
workflows/: sampleWorkFlows.json  sampleWorkFlows2.json
